# label-manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  traefik.yml
db/: init.sql
frontend/: .dockerignore  .gitignore  App.tsx  Dockerfile  app.json  nginx.conf  package.json
frontend/src/api/: labelManager.ts  storage.ts
frontend/src/screens/: PrintLabelScreen.tsx  PrinterListScreen.tsx
frontend/src/types/: printer.ts
frontend/src/web/: performancePatches.ts
src/label_manager/: main.py
src/label_manager/api/: dependencies.py
src/label_manager/api/routers/: printers.py
src/label_manager/api/schemas/: printer.py
src/label_manager/application/services/: label_builder.py  template_engine.py
src/label_manager/application/use_cases/: batch_print_use_case.py  check_printers_health_use_case.py  get_printers_use_case.py  print_label_use_case.py  process_print_queue_use_case.py  webhook_print_use_case.py
src/label_manager/domain/entities/: label_template.py  print_job.py  printer.py
src/label_manager/domain/models/: select.py
src/label_manager/domain/repositories/: label_template_repository.py  print_job_repository.py  printer_repository.py
src/label_manager/infrastructure/: constants.py  settings.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_batch_print_use_case.py  test_get_printers_use_case.py  test_label_builder.py  test_print_label_use_case.py  test_template_engine.py  test_webhook_print_use_case.py
(+7 files in other folders)
